--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -63,12 +63,13 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Assets\Scripts\CameraFollow.cs" />
-    <Compile Include="Assets\Scripts\GameManager.cs" />
     <Compile Include="Assets\Scripts\Island.cs" />
+    <Compile Include="Assets\Scripts\Manager\GameManager.cs" />
+    <Compile Include="Assets\Scripts\Manager\RsSpawner.cs" />
+    <Compile Include="Assets\Scripts\Manager\SpriteRenderOrderSystem.cs" />
     <Compile Include="Assets\Scripts\Mining.cs" />
     <Compile Include="Assets\Scripts\Movement.cs" />
     <Compile Include="Assets\Scripts\Resource.cs" />
-    <Compile Include="Assets\Scripts\RsSpawner.cs" />
     <Compile Include="Assets\Scripts\Stamina.cs" />
     <Compile Include="Assets\Scripts\Tile.cs" />
     <None Include="Assets\TextMesh Pro\Resources\Shaders\TMP_SDF-Surface-Mobile.shader" />
